fixed bugs and made the selection menu more usable